# semiq-ml-package

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  setup.py  test_requirements.txt  tuning_params.json  update-version.sh
.github/workflows/: publish-to-pypi.yml
example/: notebook.ipynb
ml-helper/: baseline_model.py
ml_helper/: __init__.py  baseline_model.py  hyperparameter_tuning.py  tuning.py
ml_helper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ml_helper/tests/: __init__.py  run_all_tests.py  test_baseline_model.py  test_hyperparameter_tuning.py  test_integration.py
scripts/: bump_version.py
semiq_ml/: __init__.py  baseline_model.py  image.py  trial_suggest.py  tuning.py
tests/: __init__.py  conftest.py  test_baseline_model.py  test_image.py  test_init.py  test_tuning.py
tests/semiq_ml/: __init__.py  test_baseline_model.py  test_baseline_model_fixed.py  test_image.py  test_tuning.py
